# project-swarm

./: .gitattributes  .gitignore  CLAUDE.md  README.md  TODO.md  _brand.yaml  _quarto.yml  bitbang_micropyhton.py  bus.py  controller.py  flake.nix  index.qmd  justfile  pyproject.toml  requirements.txt  stream.py  treefmt.lint.toml  treefmt.toml
.github/workflows/: static-analysis.yaml
data/: dataset.yaml
docs/research/: concepts.qmd
docs/research/reverse-engineering/: toy_drone.qmd
src/: bitbang_micropython.py  bus.py  controller.py  detect_webcam.py  stream.py  vision.py
