[project]
name = "meta-quest"
version = "0.1.0"
description = "using the meta quest vr system as a human interface device (HID)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiohttp>=3.14.1",
  "aiortc>=1.14.0",
  "av>=16.1.0",
  "gpiozero>=2.0.1",
  "jupyter>=1.1.1",
  "matplotlib>=3.10.9",
  "numpy>=2.4.6",
  "pandas>=3.0.3",
  # Pi-only: picamera2 needs libcamera and won't install on a dev laptop
  "picamera2>=0.3.36; platform_machine == 'aarch64' or platform_machine == 'armv7l'",
  "ultralytics>=8.3.0",
  "opencv-python>=4.10.0",
  "schemdraw>=0.22",
  "scipy>=1.17.1",
  "pyserial>=3.5",
]
